<resources>
    <string name="app_name">Blindr</string>
    <string name="action_settings">Settings</string>
    <string name="wifi_disabled">WiFi desactivado, Activalo</string>
    <string name="bssid">BSSID:</string>
    <string name="title_activity_wifi_apdetail">WifiAP Detail</string>
    <string name="map_name">Map name</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="untitled_map">Untitled map</string>
    <string name="action_save">SAVE</string>
    <string name="action_edit">EDIT</string>
    <string name="action_fingerprinting">Fingerprinting</string>
    <string name="selected">Selected</string>
    <string name="near_wifi_aps">Near WiFi Access Points</string>
    <string name="alert_delete_msg">¿Seguro que quieres borrar este mapa?</string>
    <string name="alert_delete_title">Calma moreno!</string>
    <string name="action_location_mode">Switch Location Mode</string>
    <string name="scanning_sector">Escaneando Sector</string>
    <string name="map_saved">Map saved :)</string>
    <string name="title_activity_fingerprinting">Fingerprinting</string>
    <string name="fragment_title_builder">Builder</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="action_generate_latlong">Generate Lat Long</string>
    <string name="incomplete_latlong">Need at least Lat Long for sector</string>
    <string name="and">and</string>
    <string name="completed_latlong">All lat long set</string>
    <string name="action_generate_fingerprinting">Fill map procedurally</string>
    <string name="completed_generate_figerprinting">Procedureal Fingerprinting Completed</string>
    <string name="error_generate_figerprinting">Error during Procedureal Fingerprinting</string>
    <string name="alert_clear_sector_title">Clear Sector</string>
    <string name="alert_clear_sector_msg">Do you whant to remove all this sector\'s readigns?</string>
    <string name="action_export_database">Export Database</string>
    <string name="action_import_database">Import database</string>
    <string name="action_compare_mode">Compare math generated Readings</string>
    <string name="math_generated">Math Generated</string>
    <string name="mapped">Mapped</string>
    <string name="all_readings">All</string>
    <string name="alert_select_location_mode">Location Mode</string>
    <string name="alert_select_location_mode_msg">Which kind of readings do you whant for the location process?</string>
    <string name="map_framework_map_id">ID</string>
    <string name="action_score">SCORE</string>
    <string name="pathloss_exponent">N</string>
    <string name="action_record_test">Record test</string>
</resources>
