<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.MainActivity">


    <item
        android:id="@+id/action_export_database"
        android:title="@string/action_export_database"
        android:icon="@mipmap/ic_unarchive_white_48dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_database"
        android:title="@string/action_import_database"
        android:icon="@mipmap/ic_archive_white_48dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fingerprinting"
        android:title="@string/action_fingerprinting"
        android:icon="@mipmap/ic_fingerprint_white_48dp"
        app:showAsAction="ifRoom" />

</menu>
