<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/map_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editTextName">

        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:hint="@string/height"
            android:gravity="center_horizontal"
            android:inputType="numberSigned"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="X"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"/>


        <EditText
            android:id="@+id/editTextWidth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:hint="@string/width"
            android:gravity="center_horizontal"
            android:inputType="numberSigned"
            />

    </LinearLayout>

</RelativeLayout>